--- a/src/main/resources/templates/people.html
+++ b/src/main/resources/templates/people.html
@@ -2,9 +2,10 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>People</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </head>
 <body>
 <div class="col-8 mx-auto">
@@ -16,6 +17,7 @@
             <th scope="col">First Name</th>
             <th scope="col">DOB</th>
             <th scope="col">Salary</th>
+            <th scope="col">Email</th>
         </tr>
         </thead>
         <tbody>
@@ -24,6 +26,7 @@
             <td th:text="${person.lastName}">Mark</td>
             <td th:text="${person.firstName}">Otto</td>
             <td th:text="${{person.dob}}">@mdo</td>
+            <td th:text="${{person.email}}">@mdo</td>
             <td th:text="${{person.salary}}">@mdo</td>
         </tr>
         <tr th:remove="all">
@@ -39,6 +42,31 @@
         </tr>
         </tbody>
     </table>
+    <form method="post" th:object="${person}">
+        <div class="mb-3">
+            <label for="firstName" class="form-label">First Name</label>
+            <input type="text" class="form-control" id="firstName" th:field="${person.firstName}" aria-describedby="firstNameHelp">
+        </div>
+        <div class="mb-3">
+            <label for="lastName" class="form-label">Last Name</label>
+            <input aria-describedby="lastNameHelp" class="form-control" id="lastName" th:field="${person.lastName}"
+                   type="text">
+        </div>
+        <div class="mb-3">
+            <label for="dob" class="form-label">DOB</label>
+            <input aria-describedby="dobHelp" class="form-control" id="dob" th:field="${person.dob}" type="date">
+        </div>
+        <div class="mb-3">
+            <label for="email" class="form-label">Email Address</label>
+            <input aria-describedby="emailHelp" class="form-control" id="email" th:field="${person.email}" type="email">
+            <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+        </div>
+        <div class="mb-3">
+            <label for="salary" class="form-label">Salary</label>
+            <input class="form-control" id="salary" th:field="${person.salary}" type="number">
+        </div>
+        <button type="submit" class="btn btn-primary">Save Person</button>
+    </form>
 </div>
 </body>
 </html>
