--- a/src/main/resources/templates/people.html
+++ b/src/main/resources/templates/people.html
@@ -8,8 +8,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </head>
 <body>
-<div class="col-8 mx-auto">
-    <table class="table table-striped">
+<div class="col-md-8 col-sm-10 mx-auto my-5">
+    <h2>People List</h2>
+    <table class="table table-bordered table-sm">
         <thead>
         <tr>
             <th scope="col">ID</th>
@@ -21,12 +22,15 @@
         </tr>
         </thead>
         <tbody>
+        <tr th:if="${#lists.isEmpty(people)}">
+            <td colspan="6" class="text-center">No Data</td>
+        </tr>
         <tr th:each="person : ${people}">
             <th scope="row" th:text="${person.id}">1</th>
             <td th:text="${person.lastName}">Mark</td>
             <td th:text="${person.firstName}">Otto</td>
             <td th:text="${{person.dob}}">@mdo</td>
-            <td th:text="${{person.email}}">@mdo</td>
+            <td th:text="${person.email}">@mdo</td>
             <td th:text="${{person.salary}}">@mdo</td>
         </tr>
         <tr th:remove="all">
@@ -42,6 +46,7 @@
         </tr>
         </tbody>
     </table>
+    <h2>Person Form</h2>
     <form method="post" th:object="${person}">
         <div class="mb-3">
             <label for="firstName" class="form-label">First Name</label>
