--- a/src/main/resources/templates/people.html
+++ b/src/main/resources/templates/people.html
@@ -47,28 +47,43 @@
         </tbody>
     </table>
     <h2>Person Form</h2>
-    <form method="post" th:object="${person}">
+    <form method="post" th:object="${person}" novalidate>
         <div class="mb-3">
             <label for="firstName" class="form-label">First Name</label>
-            <input type="text" class="form-control" id="firstName" th:field="${person.firstName}" aria-describedby="firstNameHelp">
+            <input type="text" class="form-control" id="firstName" th:field="${person.firstName}" th:errorclass="is-invalid" aria-describedby="firstNameHelp">
+            <div id="validationFirstName" class="invalid-feedback" th:errors="*{firstName}">
+                Please choose a username.
+            </div>
         </div>
         <div class="mb-3">
             <label for="lastName" class="form-label">Last Name</label>
-            <input aria-describedby="lastNameHelp" class="form-control" id="lastName" th:field="${person.lastName}"
+            <input aria-describedby="lastNameHelp" class="form-control" id="lastName" th:field="${person.lastName}" th:errorclass="is-invalid"
                    type="text">
+            <div id="validationLastName" class="invalid-feedback" th:errors="*{lastName}">
+                Please choose a username.
+            </div>
         </div>
         <div class="mb-3">
             <label for="dob" class="form-label">DOB</label>
-            <input aria-describedby="dobHelp" class="form-control" id="dob" th:field="${person.dob}" type="date">
+            <input aria-describedby="dobHelp" class="form-control" id="dob" th:field="${person.dob}" th:errorclass="is-invalid" type="date">
+            <div id="validationDOB" class="invalid-feedback" th:errors="*{dob}">
+                Please choose a username.
+            </div>
         </div>
         <div class="mb-3">
             <label for="email" class="form-label">Email Address</label>
-            <input aria-describedby="emailHelp" class="form-control" id="email" th:field="${person.email}" type="email">
+            <input aria-describedby="emailHelp" class="form-control" id="email" th:field="${person.email}" th:errorclass="is-invalid" type="email">
             <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+            <div id="validationEmail" class="invalid-feedback" th:errors="*{email}">
+                Please choose a username.
+            </div>
         </div>
         <div class="mb-3">
             <label for="salary" class="form-label">Salary</label>
-            <input class="form-control" id="salary" th:field="${person.salary}" type="number">
+            <input class="form-control" id="salary" th:field="${person.salary}" type="number" th:errorclass="is-invalid">
+            <div id="validationSalary" class="invalid-feedback" th:errors="*{salary}">
+                Please choose a username.
+            </div>
         </div>
         <button type="submit" class="btn btn-primary">Save Person</button>
     </form>
