--- a/src/main/resources/templates/people.html
+++ b/src/main/resources/templates/people.html
@@ -8,50 +8,56 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </head>
 <body>
-<div class="col-md-8 col-sm-10 mx-auto my-5">
+<div class="col-md-8 col-sm-11 mx-auto my-5">
     <h2>People List</h2>
-    <table class="table table-bordered table-sm">
-        <thead>
-        <tr>
-            <th scope="col">ID</th>
-            <th scope="col">Last Name</th>
-            <th scope="col">First Name</th>
-            <th scope="col">DOB</th>
-            <th scope="col">Salary</th>
-            <th scope="col">Email</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:if="${#lists.isEmpty(people)}">
-            <td colspan="6" class="text-center">No Data</td>
-        </tr>
-        <tr th:each="person : ${people}">
-            <th scope="row" th:text="${person.id}">1</th>
-            <td th:text="${person.lastName}">Mark</td>
-            <td th:text="${person.firstName}">Otto</td>
-            <td th:text="${{person.dob}}">@mdo</td>
-            <td th:text="${person.email}">@mdo</td>
-            <td th:text="${{person.salary}}">@mdo</td>
-        </tr>
-        <tr th:remove="all">
-            <th scope="row">2</th>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>@fat</td>
-        </tr>
-        <tr th:remove="all">
-            <th scope="row">3</th>
-            <td colspan="2">Larry the Bird</td>
-            <td>@twitter</td>
-        </tr>
-        </tbody>
-    </table>
+    <form method="post">
+        <table class="table table-bordered table-sm">
+            <thead>
+            <tr>
+                <th scope="col">Select</th>
+                <th scope="col">ID</th>
+                <th scope="col">Last Name</th>
+                <th scope="col">First Name</th>
+                <th scope="col">DOB</th>
+                <th scope="col" class="d-sm-none d-md-table-cell">Email</th>
+                <th scope="col">Salary</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:if="${#lists.isEmpty(people)}">
+                <td colspan="6" class="text-center">No Data</td>
+            </tr>
+            <tr th:each="person : ${people}">
+                <td><input class="form-check-input" type="checkbox" name="selections" th:value="${person.id}" /></td>
+                <th scope="row" th:text="${person.id}">1</th>
+                <td th:text="${person.lastName}">Mark</td>
+                <td th:text="${person.firstName}">Otto</td>
+                <td th:text="${#temporals.format(person.dob, 'dd MMMM, yyyy')}">@mdo</td>
+                <td th:text="${person.email}" class="d-sm-none d-md-table-cell">@mdo</td>
+                <td th:text="${{person.salary}}">@mdo</td>
+            </tr>
+            <tr th:remove="all">
+                <th scope="row">2</th>
+                <td>Jacob</td>
+                <td>Thornton</td>
+                <td>@fat</td>
+            </tr>
+            <tr th:remove="all">
+                <th scope="row">3</th>
+                <td colspan="2">Larry the Bird</td>
+                <td>@twitter</td>
+            </tr>
+            </tbody>
+        </table>
+        <button type="submit" name="edit" value="true" class="btn btn-info mb-5 me-2">Edit</button>
+        <button type="submit" name="delete" value="true" class="btn btn-danger mb-5">Delete</button>
+    </form>
     <h2>Person Form</h2>
     <form method="post" th:object="${person}" novalidate>
         <div class="mb-3">
             <label for="firstName" class="form-label">First Name</label>
             <input type="text" class="form-control" id="firstName" th:field="${person.firstName}" th:errorclass="is-invalid" aria-describedby="firstNameHelp">
-            <div id="validationFirstName" class="invalid-feedback" th:errors="*{firstName}">
+            <div id="validationFirstName" class="invalid-feedback" th:errors="${person.firstName}">
                 Please choose a username.
             </div>
         </div>
@@ -59,14 +65,14 @@
             <label for="lastName" class="form-label">Last Name</label>
             <input aria-describedby="lastNameHelp" class="form-control" id="lastName" th:field="${person.lastName}" th:errorclass="is-invalid"
                    type="text">
-            <div id="validationLastName" class="invalid-feedback" th:errors="*{lastName}">
+            <div id="validationLastName" class="invalid-feedback" th:errors="${person.lastName}">
                 Please choose a username.
             </div>
         </div>
         <div class="mb-3">
             <label for="dob" class="form-label">DOB</label>
             <input aria-describedby="dobHelp" class="form-control" id="dob" th:field="${person.dob}" th:errorclass="is-invalid" type="date">
-            <div id="validationDOB" class="invalid-feedback" th:errors="*{dob}">
+            <div id="validationDOB" class="invalid-feedback" th:errors="${person.dob}">
                 Please choose a username.
             </div>
         </div>
@@ -74,17 +80,18 @@
             <label for="email" class="form-label">Email Address</label>
             <input aria-describedby="emailHelp" class="form-control" id="email" th:field="${person.email}" th:errorclass="is-invalid" type="email">
             <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-            <div id="validationEmail" class="invalid-feedback" th:errors="*{email}">
+            <div id="validationEmail" class="invalid-feedback" th:errors="${person.email}">
                 Please choose a username.
             </div>
         </div>
         <div class="mb-3">
             <label for="salary" class="form-label">Salary</label>
             <input class="form-control" id="salary" th:field="${person.salary}" type="number" th:errorclass="is-invalid">
-            <div id="validationSalary" class="invalid-feedback" th:errors="*{salary}">
+            <div id="validationSalary" class="invalid-feedback" th:errors="${person.salary}">
                 Please choose a username.
             </div>
         </div>
+        <input type="hidden" th:field="${person.id}" />
         <button type="submit" class="btn btn-primary">Save Person</button>
     </form>
 </div>
