testing how does the internationalization works

--- a/src/main/resources/templates/people.html
+++ b/src/main/resources/templates/people.html
@@ -9,15 +9,15 @@
 </head>
 <body>
 <div class="col-md-8 col-sm-11 mx-auto my-5">
-    <h2>People List</h2>
+    <h2 th:text="#{people.list}">People List</h2>
     <form method="post">
         <table class="table table-bordered table-sm">
             <thead>
             <tr>
                 <th scope="col">Select</th>
                 <th scope="col">ID</th>
-                <th scope="col">Last Name</th>
-                <th scope="col">First Name</th>
+                <th scope="col" th:text="#{last.name}">Last Name</th>
+                <th scope="col" th:text="#{first.name}">First Name</th>
                 <th scope="col">DOB</th>
                 <th scope="col" class="d-sm-none d-md-table-cell">Email</th>
                 <th scope="col">Salary</th>
