--- a/src/main/resources/templates/people.html
+++ b/src/main/resources/templates/people.html
@@ -21,6 +21,7 @@
                 <th scope="col">DOB</th>
                 <th scope="col" class="d-sm-none d-md-table-cell">Email</th>
                 <th scope="col">Salary</th>
+                <th scope="col">Photo</th>
             </tr>
             </thead>
             <tbody>
@@ -35,6 +36,7 @@
                 <td th:text="${#temporals.format(person.dob, 'dd MMMM, yyyy')}">@mdo</td>
                 <td th:text="${person.email}" class="d-sm-none d-md-table-cell">@mdo</td>
                 <td th:text="${{person.salary}}">@mdo</td>
+                <td th:text="${person.photoFilename}">@mdo</td>
             </tr>
             <tr th:remove="all">
                 <th scope="row">2</th>
@@ -53,7 +55,7 @@
         <button type="submit" name="delete" value="true" class="btn btn-danger mb-5">Delete</button>
     </form>
     <h2>Person Form</h2>
-    <form method="post" th:object="${person}" novalidate>
+    <form method="post" th:object="${person}" novalidate enctype="multipart/form-data">
         <div class="mb-3">
             <label for="firstName" class="form-label">First Name</label>
             <input type="text" class="form-control" id="firstName" th:field="${person.firstName}" th:errorclass="is-invalid" aria-describedby="firstNameHelp">
@@ -90,6 +92,10 @@
             <div id="validationSalary" class="invalid-feedback" th:errors="${person.salary}">
                 Please choose a username.
             </div>
+        </div>
+        <div class="mb-3">
+            <label for="photoFilename" class="form-label">Photo File</label>
+            <input class="form-control" type="file" id="photoFilename" th:field="${person.photoFilename}">
         </div>
         <input type="hidden" th:field="${person.id}" />
         <button type="submit" class="btn btn-primary">Save Person</button>
