retrieving uploaded files to appear on the list

--- a/src/main/resources/templates/people.html
+++ b/src/main/resources/templates/people.html
@@ -36,7 +36,8 @@
                 <td th:text="${#temporals.format(person.dob, 'dd MMMM, yyyy')}">@mdo</td>
                 <td th:text="${person.email}" class="d-sm-none d-md-table-cell">@mdo</td>
                 <td th:text="${{person.salary}}">@mdo</td>
-                <td th:text="${person.photoFilename}">@mdo</td>
+<!--                <td th:text="${person.photoFilename}">@mdo</td>-->
+                <td><img th:src="@{/people/images/{filename}(filename=${person.photoFilename})}" height="32px" width="32px"/></td>
             </tr>
             <tr th:remove="all">
                 <th scope="row">2</th>
