--- a/src/main/resources/templates/people.html
+++ b/src/main/resources/templates/people.html
@@ -10,7 +10,7 @@
 <body>
 <div class="col-md-8 col-sm-11 mx-auto my-5">
     <h2 th:text="#{people.list}">People List</h2>
-    <form method="post">
+    <form method="post" enctype="multipart/form-data">
         <table class="table table-bordered table-sm">
             <thead>
             <tr>
@@ -36,7 +36,6 @@
                 <td th:text="${#temporals.format(person.dob, 'dd MMMM, yyyy')}">@mdo</td>
                 <td th:text="${person.email}" class="d-sm-none d-md-table-cell">@mdo</td>
                 <td class="text-end" th:text="${{person.salary}}">@mdo</td>
-<!--                <td th:text="${person.photoFilename}">@mdo</td>-->
                 <td><img th:if="${person.photoFilename}" th:src="@{/people/images/{filename}(filename=${person.photoFilename})}" height="32px" width="32px"/></td>
             </tr>
             <tr th:remove="all">
@@ -52,8 +51,22 @@
             </tr>
             </tbody>
         </table>
-        <button type="submit" name="edit" value="true" class="btn btn-info mb-5 me-2">Edit</button>
-        <button type="submit" name="delete" value="true" class="btn btn-danger mb-5">Delete</button>
+        <nav aria-label="Page navigation example">
+            <ul class="pagination">
+                <li class="page-item" th:classappend="${people.first} ? 'disabled'"><a class="page-link" th:href="@{people(page=${people.number - 1})}">Previous</a></li>
+                <li th:each="page : ${#numbers.sequence(0, people.totalPages - 1)}" class="page-item" th:classappend="${people.number} == ${page} ? 'active'"><a class="page-link" th:href="@{people(page=${page})}" th:text="${page+1}">1</a></li>
+                <li th:remove="all" class="page-item"><a class="page-link" href="#">2</a></li>
+                <li th:remove="all" class="page-item"><a class="page-link" href="#">3</a></li>
+                <li class="page-item" th:classappend="${people.last} ? 'disabled'"><a class="page-link" th:href="@{people(page=${people.number + 1})}">Next</a></li>
+            </ul>
+        </nav>
+        <div class="mb-3">
+            <label for="csvFile" class="form-label">CSV File</label>
+            <input class="form-control" type="file" id="csvFile" name="csvFile">
+        </div>
+        <button type="submit" name="action" value="edit" class="btn btn-info mb-5 me-2">Edit</button>
+        <button type="submit" name="action" value="import" class="btn btn-success mb-5 me-2">Import CSV</button>
+        <button type="submit" name="action" value="delete" class="btn btn-danger mb-5">Delete</button>
     </form>
 
     <div class="alert alert-danger" role="alert" th:text="${errorMsg}" th:if="${errorMsg}">
