--- a/src/main/resources/templates/people.html
+++ b/src/main/resources/templates/people.html
@@ -11,7 +11,7 @@
 <div class="col-md-8 col-sm-11 mx-auto my-5">
     <h2 th:text="#{people.list}">People List</h2>
     <form method="post" enctype="multipart/form-data">
-        <table class="table table-bordered table-sm">
+        <table class="table table-bordered table-sm table-striped table-hover">
             <thead>
             <tr>
                 <th scope="col">Select</th>
